--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </div>
 </section>
 
-<!-- Video Section -->
+<!-- Video Section 
 <section class="video-section">
     <div class="container">
         <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
@@ -284,7 +284,7 @@
             </video>
         </div>
     </div>
-</section>
+</section> -->
 
         <!-- Product Catalog -->
 <!-- Product Catalog -->
@@ -370,7 +370,6 @@
     <button id="chatbot-send">Enviar</button>
   </div>
 </div>
-
 <button id="chatbot-toggle">💬</button>
 <!-- ========================== -->
 
