--- a/index.html
+++ b/index.html
@@ -175,23 +175,45 @@
     <div class="carousel">
         <div class="carousel-slides">
             <div class="slide active">
-                <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
-            </div>
-            
-            <div class="slide">
-                <img src="carrusel/Cocina_Florencia_5818_SemiIndustrial_Inox_56_cm_multigas.png" alt="Florencia semi industrial" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
-            </div>
-            <div class="slide">
-                <img src="carrusel/Lavarropas_Kanji_KJHWMCFWT_6kg_Inverter_carga_frontal_Blanco.png" alt="RCA 55" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <a href="index.html">
+                    <img src="images/banner_logo.webp" alt="Logo"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
             </div>
             <div class="slide">
-                <img src="carrusel/Vent_Pie_Liliana_VVP20P_20_5_aspas_plasticas_90w.png" alt="Liliana VP20" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <a href="categoria.html?nombre=Lavado&subcategoria=Lavarropas">
+                    <img src="carrusel/banner-lavarropas.jpeg" alt="Lavarropas"
+                        loading="lazy"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
             </div>
             <div class="slide">
-                <img src="carrusel/Bici_Kanji_MTB_R29_Unisex_ALuminio_KJW29ALU_21v_freno_a_disco_suspencion_cbloqueo.png" alt="Freidoras Kentuchy" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">
+                    <img src="carrusel/banner-celulares.jpeg" alt="Celulares"
+                        loading="lazy"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
             </div>
             <div class="slide">
-                <img src="carrusel/TV_LED_Telefunken_32_TK3225S5A_atv_Android.png" alt="Notebook Daewoo" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <a href="categoria.html?nombre=Tv y audio&subcategoria=Tv">
+                    <img src="carrusel/banner-televisores.jpeg" alt="Televisores"
+                        loading="lazy"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
+            </div>
+            <div class="slide">
+                <a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">
+                    <img src="carrusel/banner-informatica.jpeg" alt="Informática"
+                        loading="lazy"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
+            </div>
+            <div class="slide">
+                <a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">
+                    <img src="carrusel/banner-ventiladores.jpeg" alt="Ventiladores"
+                        loading="lazy"
+                        onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                </a>
             </div>
         </div>
         <button class="carousel-btn prev">❮</button>
